[package]
edition = "2021"
name = "big_uf"
version = "0.1.0"


[dependencies]
crossbeam-channel = "0.5"
anyhow = "1.0.71"
bincode = "1.3.3"
bytes = "1.4.0"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["net","macros","rt"] }
tokio-util = { version = "0.7.8", features = ["codec"] }

[profile.release]
debug = 2
